--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -847,7 +847,11 @@
       "no-earlier-than": "恢复的时间点不能早于 [{earliest}] (最早可用的备份)。",
       "no-later-than-now": "恢复的时间点不能晚于当前时间。",
       "restore-before-last-migration": "恢复到上次变更历史之前",
-      "restore-before-last-migration-help-info": "@:{'database.pitr.restore-before-last-migration'}。{link}。"
+      "restore-before-last-migration-help-info": "@:{'database.pitr.restore-before-last-migration'}。{link}。",
+      "will-overwrite-current-database": "会覆盖现有数据库",
+      "restore-to": "恢复到",
+      "restore-to-new-db": "新数据库",
+      "restore-to-in-place": "原数据库"
     },
     "show-reserved-tables": "显示 Bytebase 保留的表",
     "show-reserved-databases": "显示 Bytebase 保留的数据库",
@@ -868,7 +872,8 @@
     "synced-at": "同步于 {time}",
     "not-found-last-successful-sync-was": "未找到，上次成功同步于 {time}",
     "view-unassigned-databases": "查看未分配的数据库",
-    "unassigned-databases": "未分配的数据库"
+    "unassigned-databases": "未分配的数据库",
+    "restore-database": "恢复数据库"
   },
   "repository": {
     "branch-observe-file-change": "Bytebase 跟踪文件变更的分支。",
